# FundAlg

second_pack/lab1/: main.c
second_pack/lab1/include/: utils.h
second_pack/lab1/src/: utils.c
second_pack/lab1/tests/: tests.cpp
second_pack/lab2/: CMakeLists.txt  main.c
second_pack/lab2/include/: memchr.h  memcmp.h  memcpy.h  memset.h  status.h  strchr.h  strcspn.h  strerror.h  strlen.h  strncat.h  strncmp.h  strncpy.h  strpbrk.h  strrchr.h  strstr.h  strtok.h  utils.h
second_pack/lab2/src/: memchr.c  memcmp.c  memcpy.c  memset.c  status.c  strchr.c  strcspn.c  strerror.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  strstr.c  strtok.c
second_pack/lab2/tests/: tests.cpp
second_pack/lab3/: CMakeLists.txt  main.c
second_pack/lab3/include/: utils.h
second_pack/lab3/src/: utils.c
second_pack/lab3/tests/: tests.cpp
second_pack/lab4/: CMakeLists.txt  inp.txt  main.c
second_pack/lab4/include/: utils.h
second_pack/lab4/src/: utils.c
second_pack/lab4/tests/: tests.cpp
second_pack/lab5/: CMakeLists.txt  input.txt  main.c  out.txt
second_pack/lab5/include/: utils.h
second_pack/lab5/src/: utils.c
second_pack/lab5/tests/: tests.cpp
second_pack/lab6/: CMakeLists.txt  inp.txt  main.c
second_pack/lab6/include/: utils.h
second_pack/lab6/src/: utils.c
second_pack/lab6/tests/: duplicate.txt  test_data.txt  tests.cpp
third_pack/lab1/: CMakeLists.txt  main.c
third_pack/lab1/include/: utils.h
third_pack/lab1/src/: utils.c
third_pack/lab1/tests/: tests.cpp
third_pack/lab6/: CMakeLists.txt  main.c
(+8 files in other folders)
